User registration function complete

--- a/mylevelquest-frontend/src/app/globals.css
+++ b/mylevelquest-frontend/src/app/globals.css
@@ -24,3 +24,22 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear,
+input[type="password"]::-webkit-contacts-auto-fill-button,
+input[type="password"]::-webkit-credentials-auto-fill-button {
+  display: none !important;
+}
+
+/* Hide Edge and IE browser's eye icon */
+input.password-input::-ms-reveal {
+  display: none !important;
+}
+
+/* Hide Chrome's eye icon */
+input.password-input::-webkit-credentials-auto-fill-button {
+  visibility: hidden;
+  position: absolute;
+  right: 0;
+}
